# local-rag

./: .env.example  README.md  README_.md  pyproject.toml
assets/: README.txt
local_rag/: __init__.py  config.py  db.py
tests/: test_bootstrap.py  test_config.py  test_db.py
